--- a/client/src/assets/scss/layouts/_header.scss
+++ b/client/src/assets/scss/layouts/_header.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   border-bottom: 2px solid $gray;
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
